; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c_SYS_InitFont.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c_SYS_InitFont.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@SYS_FONTSIZE_SJIS = common dso_local global i32 0, align 4
@SYS_FONTSIZE_ANSI = common dso_local global i32 0, align 4
@sys_fontimage = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SYS_InitFont(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* null, i8** %4, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = icmp ne %struct.TYPE_5__* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %55

8:                                                ; preds = %1
  %9 = call i32 (...) @SYS_GetFontEncoding()
  %10 = icmp eq i32 %9, 1
  br i1 %10, label %11, label %20

11:                                               ; preds = %8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = load i32, i32* @SYS_FONTSIZE_SJIS, align 4
  %14 = call i32 @memset(%struct.TYPE_5__* %12, i32 0, i32 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = ptrtoint %struct.TYPE_5__* %15 to i32
  %17 = add nsw i32 %16, 868096
  %18 = sext i32 %17 to i64
  %19 = inttoptr i64 %18 to i8*
  store i8* %19, i8** %4, align 8
  br label %29

20:                                               ; preds = %8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %22 = load i32, i32* @SYS_FONTSIZE_ANSI, align 4
  %23 = call i32 @memset(%struct.TYPE_5__* %21, i32 0, i32 %22)
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %25 = ptrtoint %struct.TYPE_5__* %24 to i32
  %26 = add nsw i32 %25, 119072
  %27 = sext i32 %26 to i64
  %28 = inttoptr i64 %27 to i8*
  store i8* %28, i8** %4, align 8
  br label %29

29:                                               ; preds = %20, %11
  %30 = load i8*, i8** %4, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %32 = call i32 @__SYS_LoadFont(i8* %30, %struct.TYPE_5__* %31)
  %33 = icmp eq i32 %32, 1
  br i1 %33, label %34, label %54

34:                                               ; preds = %29
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %36 = ptrtoint %struct.TYPE_5__* %35 to i32
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = add nsw i32 %36, %39
  %41 = add nsw i32 %40, 31
  %42 = and i32 %41, -32
  %43 = sext i32 %42 to i64
  %44 = inttoptr i64 %43 to i32*
  store i32* %44, i32** @sys_fontimage, align 8
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %46 = bitcast %struct.TYPE_5__* %45 to i32*
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %46, i64 %50
  %52 = load i32*, i32** @sys_fontimage, align 8
  %53 = call i32 @__expand_font(i32* %51, i32* %52)
  store i32 1, i32* %2, align 4
  br label %55

54:                                               ; preds = %29
  store i32 0, i32* %2, align 4
  br label %55

55:                                               ; preds = %54, %34, %7
  %56 = load i32, i32* %2, align 4
  ret i32 %56
}

declare dso_local i32 @SYS_GetFontEncoding(...) #1

declare dso_local i32 @memset(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @__SYS_LoadFont(i8*, %struct.TYPE_5__*) #1

declare dso_local i32 @__expand_font(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
